# msim

./: .gitignore  CMakeLists.txt  README.md  README_Windows.md  build_linux.sh  build_win.ps1  check_fix8_local.sh  run_tests.ps1  run_tests.sh  verify_fix8.ps1  verify_fix8.sh
.github/workflows/: ci.yml  cmake.yml
doc/: ignored_warnings.md
etc/: fix8.cfg
f8defs/: FIX42.xml
include/: fix8_stub.hpp
scripts/: README.md  build_fix8_quiet.ps1  build_fix8_quiet.sh
src/: fill_sim.cpp
tests/: test_integration.cpp  test_smoke.cpp
